--- a/learnings/v8.md
+++ b/learnings/v8.md
@@ -20,7 +20,7 @@ node --v8-options | grep "in progress"
 node --v8-options | grep "staged"
 ```
 
-## Node Architecture Ovevrview
+## Node Architecture Overview
 
 ![Node Architecture](./nodearchitecture.jpg "Node Architecture")
 
